# google___zerocopy

.github/workflows/: anneal-release.yml  anneal.yml  auto-approve.yml  backport-pr.yml  ci.yml  dependency-review.yml  docs.yml  release-crate-version.yml  release.yml  roll-pinned-toolchain-versions.yml  scorecard.yml
anneal/: Cargo.toml  build.rs
anneal/src/: aeneas.rs  setup.rs
anneal/tests/: integration.rs  ui.rs
anneal/tests/fixtures/archive_lake_cache_reuse/: anneal.toml
anneal/tests/fixtures/expand_output/: expected-aeneas.stdout  expected-all.stdout
anneal/tests/fixtures/extern_never_verified/: out.txt
anneal/tests/fixtures/generate_output/: expected-generate.stdout
anneal/tools/: check-release-flow-dry-run.sh  check-release-pr-files.py  test_release_pr_files.py
anneal/v2/: Cargo.toml  flake.nix  rewrite-lake-vendor.py
anneal/v2/src/: main.rs  util.rs
anneal/v2/tests/: test_rewrite_lake_vendor.py
ci/: release_anneal_version.sh
exocrate/src/: lib.rs
githooks/: pre-push
tools/ui-runner/src/: main.rs
zerocopy/: Cargo.toml  build.rs
zerocopy/src/: byteorder.rs  layout.rs
zerocopy/src/util/: mod.rs
zerocopy/zerocopy-derive/: Cargo.toml
