[workspace]
members = ["."]

[features]
# Enables tests that assume a prebuilt exocrate archive.
exocrate_tests = []

[package]
name = "cargo-anneal"
edition = "2024"
version = "0.1.0-alpha.22"
description = "Formally verify that your safety comments are correct."
categories = [
  "development-tools::cargo-plugins",
  "development-tools::testing",
  "compilers",
  "mathematics",
  "security",
]
keywords = ["verification", "cargo", "plugin", "unsafe", "lean"]
authors = ["Joshua Liebow-Feeser <joshlf@google.com>"]
license = "BSD-2-Clause OR Apache-2.0 OR MIT"
repository = "https://github.com/google/zerocopy/tree/main/anneal"
publish = true

exclude = [".*", "testdata"]

# FIXME: Replace these placeholder archive URLs and hashes before publishing
# this crate; `cargo anneal setup` uses this metadata by default when callers
# do not provide a local archive.
[package.metadata.exocrate.linux.x86_64]
sha256 = "ba7816bf8f01cfea414140de5dae2223b00361a396177a9cb410ff61f20015ad"
url = "https://example.com/linux-x86_64.tar.zst"

[package.metadata.exocrate.macos.x86_64]
sha256 = "ba7816bf8f01cfea414140de5dae2223b00361a396177a9cb410ff61f20015ad"
url = "https://example.com/macos-x86_64.tar.zst"

[package.metadata.exocrate.linux.aarch64]
sha256 = "ba7816bf8f01cfea414140de5dae2223b00361a396177a9cb410ff61f20015ad"
url = "https://example.com/linux-aarch64.tar.zst"

[package.metadata.exocrate.macos.aarch64]
sha256 = "ba7816bf8f01cfea414140de5dae2223b00361a396177a9cb410ff61f20015ad"
url = "https://example.com/macos-aarch64.tar.zst"

[dependencies]
exocrate = { path = "../../exocrate" }
toml_const = "1.3.0"
clap = { version = "4.5", features = ["derive"] }
env_logger = "0.11"
log = "0.4"

[dev-dependencies]
pathdiff = "0.2"
serde_json = "1"
tempfile = "3"
